--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://fontawesome.com/41c8b474e2.js" crossorigin="" anonymus></script>
+    <script src="https://kit.fontawesome.com/aa5f4bc39f.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/bootstrap-5.3.1-dist/">
@@ -17,9 +17,41 @@
     <header>
         <div class="container">
             <img src="images/Logo.svg" alt="crito logotype">
-            <div>
-                <div>Contactinformation</div>
-                <div>Menu</div>
+            <button class="menu-bars"><i class="fa-solid fa-bars"></i></button>
+            <div class="menu">
+
+                <div class="top-menu">
+                    <div class="contact-information">
+                        <div class="content-box">
+                            <i class="contact-icon fa-solid fa-phone"></i>
+                            +46 (8) 121 470 50
+                        </div>
+                        <div class="content-box">
+                            <i class="contact-icon fa-regular fa-envelope"></i>
+                            info@crito.com
+                        </div>
+                        <div class="content-box last">
+                            <i class="contact-icon fa-solid fa-location-dot"></i>
+                            Sveavägen 31, 111 34 STOCKHOLM
+                        </div>
+                        </div>
+                    <div class="social-media">
+                        <a href="https://facebook.com" target="_blank"><i class="social-media-icon fa-brands fa-facebook"></i></a>
+                        <a href="#https://twitter.com/" target="_blank"><i class="social-media-icon fa-brands fa-twitter"></i></a>
+                        <a href="https://instagram.com/" target="_blank"><i class="social-media-icon fa-brands fa-instagram"></i></a>
+                        <a href="https://linkein.com/" target="_blank"><i class="social-media-icon fa-brands fa-linkedin"></i></a>
+                    </div>
+                </div>
+                <div class="main-menu">
+                    <nav>
+                        <a class="active" href="home.html">Home</a>
+                        <a href="services.html">Service</a>
+                        <a href="news.html">News</a>
+                        <a href="contacts.html">Contacts</a>
+                    </nav>
+                    
+                    <a class="btn-yellow" href="login.html">Login <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                </div>
         </div>
         </div>
     </header>
