--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/aa5f4bc39f.js" crossorigin="anonymous"></script>
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/bootstrap-5.3.1-dist/">
     <link rel="stylesheet" href="/css/style.css">
     <title>Crito</title>
@@ -62,8 +62,18 @@
 
 
 
+<div class="banner">
+    <div class="pitch">
+        <p class="text-large">We Provide The Best Business Solutions</p>
+        <p class="text-small">Establish your vision and value proposition and turn them into testable prototypes.</p>
+    </div>
+    <img src="images/Image.png" alt="picture of a man looking into his tablet">
+</div>
 
 
+<button type="button" class="btn-yellow">Get Consulting<i class="fa-solid fa-arrow-trend-up"></i></button>
+<button type="button" class="btn-transparent">Learn More<i class="fa-solid fa-arrow-trend-up"></i></button>
+<img src="images/Rectangle 607.svg" alt="">
 
 
 
