--- a/contacts.html
+++ b/contacts.html
@@ -51,82 +51,8 @@
                         <a href="contacts.html">Contacts</a>
                     </nav>
                     
-                    <a class="btn-yellow btn-login" href="login.html">Login <i class="fa-solid fa-square-arrow-up-right"></i></a>
+                    <a class="btn-yellow" href="login.html">Login <i class="fa-solid fa-square-arrow-up-right"></i></a>
                 </div>
         </div>
         </div>
     </header>
-    <body>
-
-
-
-
-
-<!-- showcase sectiom -->
-<!-- <section class="banner">
-    <div class="pitch">
-        <p class="text-large">We Provide The Best Business Solutions</p>
-        <p class="text-small">Establish your vision and value proposition and turn them into testable prototypes.</p>
-    </div>
-    <img src="images/Image.png" alt="picture of a man looking into his tablet">
-<button type="button" class="btn-yellow">Get Consulting<i class="fa-solid fa-arrow-trend-up"></i></button>
-<button type="button" class="btn-transparent">Learn More<i class="fa-solid fa-arrow-trend-up"></i></button>
-
-    <section/> -->
-
-<section class="showcase">
-    <div class="container">
-        <div class="content">
-            <h1>We Provide The Best Business Solutions</h1>
-            <p>Establish your vision and value proposition and turn them into testable prototypes.</p>
-            <a class="btn-yellow" href="login.html">Get Consulting<i class="fa-regular fa-arrow-up-right"></i></a>
-            <a class="btn-transparent" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i></a>
-        </div>
-        <img src="images/Image.png" alt="showcase image of a man in a suit with a tablet">
-    </div>
-    <img src="images/Rectangle 607.svg" alt="">
-</section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </body>
-    <footer></footer>
-    <scriptsrc="https:
-        //cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
-        crossorigin="anonymous">
-        </script>
-        <scriptsrc="scripts /script.js">
-            </script>
-</body>
-
-</html>
