--- a/contacts.html
+++ b/contacts.html
@@ -17,7 +17,7 @@
 <!-- header sectiom -->
     <header>
         <div class="container">
-            <img src="images/Logo.svg" alt="crito logotype">
+            <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a> 
             <button class="menu-bars"><i class="fa-solid fa-bars"></i></button>
             <div class="menu">
 
@@ -45,7 +45,7 @@
                 </div>
                 <div class="main-menu">
                     <nav>
-                        <a class="active" href="home.html">Home</a>
+                        <a class="active" href="index.html">Home</a>
                         <a href="services.html">Service</a>
                         <a href="news.html">News</a>
                         <a href="contacts.html">Contacts</a>
