--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script defer src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/bootstrap-5.3.1-dist/">
+    <link rel="stylesheet" href="/bootstrap-5.3.1-dist/">
     <link rel="stylesheet" href="/css/style.css">
     <title>Crito</title>
 </head>
@@ -17,7 +17,7 @@
 <!-- header sectiom -->
     <header>
         <div class="container">
-            <img src="images/Logo.svg" alt="crito logotype">
+           <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a> 
             <button class="menu-bars"><i class="fa-solid fa-bars"></i></button>
             <div class="menu">
 
@@ -45,7 +45,7 @@
                 </div>
                 <div class="main-menu">
                     <nav>
-                        <a class="active" href="home.html">Home</a>
+                        <a class="active" href="index.html">Home</a>
                         <a href="services.html">Service</a>
                         <a href="news.html">News</a>
                         <a href="contacts.html">Contacts</a>
@@ -58,22 +58,6 @@
     </header>
     <body>
 
-
-
-
-
-<!-- showcase sectiom -->
-<!-- <section class="banner">
-    <div class="pitch">
-        <p class="text-large">We Provide The Best Business Solutions</p>
-        <p class="text-small">Establish your vision and value proposition and turn them into testable prototypes.</p>
-    </div>
-    <img src="images/Image.png" alt="picture of a man looking into his tablet">
-<button type="button" class="btn-yellow">Get Consulting<i class="fa-solid fa-arrow-trend-up"></i></button>
-<button type="button" class="btn-transparent">Learn More<i class="fa-solid fa-arrow-trend-up"></i></button>
-
-    <section/> -->
-
 <section class="showcase">
     <div class="container">
         <div class="content">
@@ -83,9 +67,18 @@
             <a class="btn-transparent" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i></a>
         </div>
         <img src="images/Image.png" alt="showcase image of a man in a suit with a tablet">
+        <!-- <img id="svg-img" src="images/Rectangle 607.svg" alt=""> -->
     </div>
-    <img src="images/Rectangle 607.svg" alt="">
+   
 </section>
+
+<div class="img-advertising">
+    <img src="images/3.svg" alt="">
+    <img src="images/🖥-Landing-Pages.svg" alt="">
+    <img src="images/Page-2.svg" alt="">
+    <img src="images/Page-3.svg" alt="">
+    <img src="images/Page-1.svg" alt="">
+</div>
 
 
 
