--- a/index.html
+++ b/index.html
@@ -80,39 +80,40 @@
     <img src="images/Page-1.svg" alt="">
 </div>
 
+<section class="features">
+    <div class="container">
+        <div class="content">
+            <h2 id="features">Features</h2>
+            <p>Our Accounting is trusted by thousand of companies</p>
+            <a class="btn-yellow btn-features" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i></a>
+        </div>
+        <div class="features-consulting">
+            <div class="box">
+                <img src="images/Icon.svg" alt="icon of a handshake">
+                <h3>Business Advice</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="box">
+                <img src="images/Icon.svg" alt="icon of a handshake">
+                <h3>Startup Business</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+            </div>
+            <div class="box">
+                <img src="images/Icon.svg" alt="icon of a handshake">
+                <h3>Financial Advice</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="box">
+                <img src="images/Icon.svg" alt="icon of a handshake">
+                <h3>Risk Management</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </div>
+</section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    </body>
+</body>
     <footer></footer>
     <scriptsrc="https:
         //cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
