working with section about

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <a class="btn-yellow" href="login.html">Get Consulting<i class="fa-regular fa-arrow-up-right"></i></a>
             <a class="btn-transparent" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i></a>
         </div>
-        <img src="images/Image.png" alt="showcase image of a man in a suit with a tablet">
+        <img src="images/Image-showcase.png" alt="showcase image of a man in a suit with a tablet">
         <!-- <img id="svg-img" src="images/Rectangle 607.svg" alt=""> -->
     </div>
    
@@ -83,32 +83,53 @@
 <section class="features">
     <div class="container">
         <div class="content">
-            <h2 id="features">Features</h2>
-            <p>Our Accounting is trusted by thousand of companies</p>
+            <h2 class="heading-red">Features</h2>
+            <h3>Our Accounting is trusted by thousand of companies</h3>
             <a class="btn-yellow btn-features" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i></a>
         </div>
         <div class="features-consulting">
             <div class="box">
-                <img src="images/Icon.svg" alt="icon of a handshake">
+                <img src="images/Icon-handshake.svg" alt="icon of a handshake">
                 <h3>Business Advice</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="box">
-                <img src="images/Icon.svg" alt="icon of a handshake">
+                <img src="images/Icon-lightbulb.svg" alt="icon of a handshake">
                 <h3>Startup Business</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
             </div>
             <div class="box">
-                <img src="images/Icon.svg" alt="icon of a handshake">
+                <img src="images/Icon-graf.svg" alt="icon of a handshake">
                 <h3>Financial Advice</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
             <div class="box">
-                <img src="images/Icon.svg" alt="icon of a handshake">
+                <img src="images/Icon-settings.svg" alt="icon of a handshake">
                 <h3>Risk Management</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
             </div>
         </div>
+    </div>
+</section>
+
+
+<section class="about container">
+    <div class="founder">
+        <img src="images/Image-about.svg" alt="Image of the Founder, Samantha Brown">
+       
+        <div class="background-frame">
+        <p><strong>Samantha Brown</strong>, <span>Founder</span><br><br>"Lorem ipsum, dolor sit amet consectetur<br> adipisicing elit."</p>
+    </div>
+
+    </div>
+    <div class="content">
+        <h2 class="heading-red">About Company</h2>
+        <h3>We Are Business Consulting & Credit Repair Experts</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos.</p>        
+        <a class="btn-black" href="login.html">Learn More<i class="fa-regular fa-arrow-up-right"></i></a>
+        <a class="btn-transparent btn-video href="login.html"><i class="fa-solid fa-caret-right"></i></a>
+    
     </div>
 </section>
 
