positioned boxes with grid

--- a/index.html
+++ b/index.html
@@ -131,17 +131,18 @@
         </section>
 
 
-        <section class="container">
-            <div class="about">
+        <section class="about">
+            <div class="container">
                 <div class="founder">
                     <img src="images/Image-about.svg" alt="Image of the Founder, Samantha Brown">
 
                     <div class="background-frame">
                         <p>
                             <strong>Samantha Brown</strong>,
-                            <span>Founder</span>
+                            <span>Founder</span><br>
                             <br>"Lorem ipsum, dolor sit amet consectetur<br>
-                            adipisicing elit."</p>
+                            adipisicing elit."
+                        </p>
                     </div>
 
                 </div>
@@ -152,12 +153,51 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos.</p>
                     <a class="btn-black" href="login.html">Learn More<i class="arrow-top-right fa-regular fa-arrow-up-right"></i>
                     </a>
-                    <a class="btn-transparent btn-video" href=" login.html">
+                    <a class="btn-circle" href=" login.html">
                         <i class="fa-solid fa-caret-right"></i>
                     </a>
                 </div>
             </div>
         </section>
+
+
+
+
+
+
+<section class="services">
+    <div class="container">
+        <div class="head-lines">
+            <h2 class="heading-red">Our Services</h2>
+            <h3>We Provide The Best Service For Consulting</h3>
+        </div>  
+        <div class="content">
+            <div class="box">
+                <h4>Business Advice</h4>
+                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
+            </div>
+            <div class="box">
+                <h4>Startup Business</h4>
+                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
+            </div>
+            <div class="box">
+                <h4>Financial Advice</h4>
+                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
+            </div>
+            <div class="box">
+                <h4>Risk Managment</h4>
+                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
+            </div>
+        </div>
+    </div>
+</section>
+
+
+
 
 
     </body>
