working with servoce-section

--- a/index.html
+++ b/index.html
@@ -161,43 +161,49 @@
         </section>
 
 
-
-
-
-
-<section class="services">
-    <div class="container">
-        <div class="head-lines">
-            <h2 class="heading-red">Our Services</h2>
-            <h3>We Provide The Best Service For Consulting</h3>
-        </div>  
-        <div class="content">
-            <div class="box">
-                <h4>Business Advice</h4>
-                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
-                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
+        <section class="services">
+            <div class="container">
+                <div class="head-lines">
+                    <h2 class="heading-red">Our Services</h2>
+                    <h3>We Provide The Best<br>
+                        Service For Consulting</h3>
+                </div>
+                <div class="content">
+                    <div class="box">
+                        <span></span>
+                        <h4>Business Advice</h4>
+                        <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                        <a class="btn-circle" href="">
+                            <i class="fa-light fa-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="box">
+                        <span></span>
+                        <h4>Startup Business</h4>
+                        <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                        <a class="btn-circle" href="">
+                            <i class="fa-light fa-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="box">
+                        <span></span>
+                        <h4>Financial Advice</h4>
+                        <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                        <a class="btn-circle" href="">
+                            <i class="fa-light fa-arrow-right"></i>
+                        </a>
+                    </div>
+                    <div class="box">
+                        <span></span>
+                        <h4>Risk Managment</h4>
+                        <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
+                        <a class="btn-circle" href="">
+                            <i class="fa-light fa-arrow-right"></i>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="box">
-                <h4>Startup Business</h4>
-                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
-                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
-            </div>
-            <div class="box">
-                <h4>Financial Advice</h4>
-                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
-                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
-            </div>
-            <div class="box">
-                <h4>Risk Managment</h4>
-                <p>Lorem, ipsum dolor sit amet concectetur adipisicing elit. Officiis in nam possimus.</p>
-                <a class="btn-circle" href=""><i class="fa-light fa-arrow-right"></i></a>
-            </div>
-        </div>
-    </div>
-</section>
-
-
-
+        </section>
 
 
     </body>
