--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
         <!-- <script src="https://kit.fontawesome.com/aa5f4bc39f.js" crossorigin="anonymous"></script> -->
         <script defer src="https://kit.fontawesome.com/41c8b474e2.js" crossorigin="anonymous"></script>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-        <link rel="stylesheet" href="/bootstrap-5.3.1-dist/">
+        <!-- <link rel="stylesheet" href="/bootstrap-5.3.1-dist/"> -->
         <link rel="stylesheet" href="/css/style.css">
         <title>Crito</title>
     </head>
 
     <body>
-        <!-- header sectiom -->
         <header>
             <div class="container">
                 <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
@@ -71,8 +70,8 @@
     </body>
     <body>
 
-        <section class="showcase border">
-            <div class="container border">
+        <section class="showcase">
+            <div class="container">
                 <div class="content">
                     <h1>We Provide The Best Business Solutions</h1>
                     <p>Establish your vision and value proposition and turn them into testable prototypes.</p>
@@ -97,7 +96,7 @@
         </div>
 
         <section class="features">
-            <div class="container border">
+            <div class="container">
                 <div class="content">
                     <h2 class="heading-red">Features</h2>
                     <h3>Our Accounting is trusted by thousand of companies</h3>
@@ -165,8 +164,8 @@
         </section>
 
 
-        <section class="services border">
-            <div class="container border">
+        <section class="services">
+            <div class="container">
                 <div class="headlines">
                     <h2 class="heading-red">Our Services</h2>
                     <h3>We Provide The Best<br>
@@ -214,7 +213,7 @@
         </section>
 
         <section class="choose-us">
-            <div class="container border">
+            <div class="container">
                 <div class="content">
                     <div class="headlines">
                         <h2 class="heading-red">Why Choose Us</h2>
@@ -243,14 +242,77 @@
                     </div>
                 </div>
                 <div class="main-img-container">
+                    <div class="frame-grey"></div>
                     <img class="main-img" src="images/amy-hirschi-K0c8ko3e6AA-unsplash.jpg" alt="Image of two women discussing">
-                    <div class="border-background"></div>
+         
                 </div>
 
             </div>
         </section>
 
-        <section class="case"></section>
+        <section class="case">
+            <div class="container">
+                <div class="headlines">
+                    <h2>project  case studies</h2>
+                    <h3>let's looks our global projects</h3>
+                </div>
+                <div class="content-grid">
+                    <div class="box box-1">
+                        <img src="images/case-business.png" alt="Image of a man reading a news paper">
+                        <h4>grow your business</h4>
+                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i></a>
+                    </div>
+                    <div class="box box-2">
+                        <img src="images/case-educate.png" alt="Image of a man reading a news paper">
+                        <h4>educate your employees to get better results</h4>
+                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i></a>
+                    </div>
+                    <div class="box box-3">
+                        <img src="images/case-insights.png" alt="Image of a man reading a news paper">
+                        <h4>business insights is a important piece of your business</h4>
+                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i></a>
+                    </div>
+                    <div class="box box-4">
+                        <img  src="images/case-responsive.png" alt="Image of a man reading a news paper">
+                        <h4>why your client needs a responsive website</h4>
+                        <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i></a>
+                    </div>
+                </div>
+                <a class="btn-black" href="login.html">Learn More<i class="arrow-top-right fa-regular fa-arrow-up-right"></i></a>
+        </div>
+    </section>
+
+    <section class="team">
+        <div class="container">
+            <div class="top">
+                <h2>meet our team</h2>
+                <h3>experience team members </h3>
+                <a class="btn-transparent" href="services.html">browse team<i class="fa-regular fa-arrow-up-right"></i>
+            </div>
+            <div class="content">
+                <div class="box">
+                    <img src="images/team-kristine.png" alt="Image of Kristine Palmer, the chef operation officer">
+                    <p>kristine palmer</p>
+                    <p class="descr-txt">chef operation officer</p>
+                </div>
+                <div class="box">
+                    <img src="images/team-mark.png" alt="Image of Mark Aubri, senior consultant">
+                    <p>mark aubri</p>
+                    <p class="descr-txt">senior consultant</p>
+                </div>
+                <div class="box">
+                    <img src="images/team-kimberly.png" alt="Image of kimberly hansen, senior consultant">
+                    <p>kimberly hansen</p>
+                    <p class="descr-txt">senior consultant</p>
+                </div>
+                <div class="box">
+                    <img src="images/team-justin.png" alt="Image of Justin willowman, senior tech consultant">
+                    <p>justin willoman</p>
+                    <p class="descr-txt">senior tech consultant</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
     </body>
     <footer></footer>
