--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                 </div>
                 <div class="main-img-container">
                     <div class="frame-grey"></div>
-                    <img class="main-img" src="images/amy-hirschi-K0c8ko3e6AA-unsplash.jpg" alt="Image of two women discussing">
+                    <img class="main-img" src="images/choose-us.png" alt="Image of two women discussing">
 
                 </div>
 
@@ -337,6 +337,66 @@
         </section>
         <!-- </main> -->
 
+
+        <section class="testimonial">
+            <div class="container border">
+                <div class="top-heading">
+                    <h2>testimonial</h2>
+                    <h3>what our client says</h3>
+                </div>
+                <article>
+                    <div class="box">
+                        <div class="rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"</p>
+                        <div class="rater">
+                            <img src="images/rater-1.jpg" alt="">
+                            <p class="name">cassandra warren</p>
+                            <p class="descr-txt">business manager, dorfus</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"</p>
+                        <div class="rater">
+                            <img src="images/rater-2.jpg" alt="">
+                            <p class="name">amanda tulling</p>
+                            <p class="descr-txt">senior developer, square</p>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <div class="rating">
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star checked"></span>
+                            <span class="fa fa-star"></span>
+                            <span class="fa fa-star"></span>
+                        </div>
+                        <p>"Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium libero, ad dignissimos velit qui, dolorum obcaecati cum saepe nesciunt nemo eligendi numquam voluptate"</p>
+                        <div class="rater">
+                            <img src="images/rater-3.jpg" alt="">
+                            <p class="name">jack mcdogglas</p>
+                            <p class="descr-txt">key account manager, gobona</p>
+                        </div>
+                    </div>
+                </article>
+                <div class="center-content">
+                    <a class="btn-black" href="projects.html">all reviews<i class="arrow-top-right fa-regular fa-arrow-up-right"></i>
+                    </a>
+                </div>
+            </div>
+        </section>
         <section class="subscribe">
             <img src="images/background-wavy-lines.svg" alt="" class="background-wavy-lines">
             <div class="container">
