started working with section 'articles'

--- a/index.html
+++ b/index.html
@@ -397,6 +397,7 @@
                 </div>
             </div>
         </section>
+        
         <section class="subscribe">
             <img src="images/background-wavy-lines.svg" alt="" class="background-wavy-lines">
             <div class="container">
@@ -406,6 +407,28 @@
                     <button class="btn-yellow">Subscribe<i class="fa-regular fa-arrow-up-right"></i>
                     </button>
                 </form>
+            </div>
+        </section>
+
+        <section class="articles">
+            <div class="container">
+                <div class="top-heading">
+                    <h2>article & news</h2>
+                    <div class="top-row">
+                        <h3>get every single articles & news</h3>
+                        <a class="btn-transparent" href="services.html">browse articles<i class="fa-regular fa-arrow-up-right"></i>
+                        </a>
+                    </div>
+                </div>
+
+                <article>
+                    <img class="img-1" src="images/article-1.jpg" alt="A woman with long brown hair and wearing a blue suit, sitting on a chair next to a table, smiling">
+                    <div class="box-date"><span>25</span>Mar</div>
+                    <h4>business</h4>
+                    <h5>how to use digitalization in the classroom</h5>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
+                </article>
+
             </div>
         </section>
 
