Finished section articles-news, mobile and desktop

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
             </div>
             <div class="dots">
                 <span class="dot"></span>
-                <span class="dot dot-2"></span>
+                <span class="dot dot-active"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
                 <span class="dot"></span>
@@ -397,7 +397,7 @@
                 </div>
             </div>
         </section>
-        
+
         <section class="subscribe">
             <img src="images/background-wavy-lines.svg" alt="" class="background-wavy-lines">
             <div class="container">
@@ -410,7 +410,7 @@
             </div>
         </section>
 
-        <section class="articles">
+        <section class="articles-news">
             <div class="container">
                 <div class="top-heading">
                     <h2>article & news</h2>
@@ -420,15 +420,54 @@
                         </a>
                     </div>
                 </div>
-
-                <article>
-                    <img class="img-1" src="images/article-1.jpg" alt="A woman with long brown hair and wearing a blue suit, sitting on a chair next to a table, smiling">
-                    <div class="box-date"><span>25</span>Mar</div>
-                    <h4>business</h4>
-                    <h5>how to use digitalization in the classroom</h5>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
-                </article>
-
+                <div class="articles">
+                    <article>
+                        <img class="img-1" src="images/article-1.png" alt="A woman with long brown hair and wearing a blue suit, sitting on a chair next to a table, smiling">
+                        <div class="box-date">
+                            <p>
+                                <span>25</span>Mar
+                            </p>
+                        </div>
+                        <div class="content">
+                            <h4>business</h4>
+                            <h5>how to use digitalization in the classroom</h5>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img class="img-1" src="images/article-2.png" alt="Descriptions about Chat GPT's ability">
+                        <div class="box-date">
+                            <p>
+                                <span>17</span>Mar
+                            </p>
+                        </div>
+                        <div class="content">
+                            <h4>business</h4>
+                            <h5>how to implement chat GPT in your projects</h5>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img class="img-1" src="images/article-3.png" alt="A mobile phone lying on the top of two books about CSS and Jquery">
+                        <div class="box-date">
+                            <p>
+                                <span>13</span>Mar
+                            </p>
+                        </div>
+                        <div class="content">
+                            <h4>business</h4>
+                            <h5>the guide to support modern CSS design</h5>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto sed hic libero.</p>
+                        </div>
+                    </article>
+                </div>
+            </div>
+            <div class="dots">
+                <span class="dot dot-active"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
             </div>
         </section>
 
