--- a/index.html
+++ b/index.html
@@ -82,9 +82,7 @@
                     </a>
                 </div>
                 <img src="images/Image-showcase.png" alt="showcase image of a man in a suit with a tablet">
-
             </div>
-
         </section>
 
         <div class="img-advertising container">
@@ -128,8 +126,6 @@
                 </div>
             </div>
         </section>
-
-
         <section class="about">
             <div class="container">
 
@@ -472,7 +468,66 @@
         </section>
 
     </body>
-    <footer>FOOTER</footer>
-    <scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
-    <scriptsrc="scripts/script.js"></script>
-</html></body></html></body></html>
+
+    <footer>
+        <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
+        <div class="footer-content">
+
+            <div class="container">
+                <div class="box box-1">
+                    <img src="images/logotype-white.svg" alt="Logotype">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+                </div>
+
+                <div class="box box-2">
+                    <h4>company</h4>
+                    <a href="#">about</a>
+                    <a href="#">features</a>
+                    <a href="#">works</a>
+                    <a href="#">career</a>
+                </div>
+                <div class="box box-3">
+                    <h4>help</h4>
+                    <a href="#">customer support</a>
+                    <a href="#">delivery details</h3>
+                    <a href="#">terms & conditions</h3>
+                    <a href="#">privacy policy</h3>
+                </div>
+                <div class="box box-4">
+                    <h4>Resources</h4>
+                    <a href="#">Free eBooks</a>
+                    <a href="#">Development Tutorial</a>
+                    <a href="#">How to - Blog</a>
+                    <a href="#">Youtube Playlist</a>
+                </div>
+                <div class="box box-5">
+                    <h4>Link</h4>
+                    <a href="#">Free eBooks</a>
+                    <a href="#">Development Tutorial</a>
+                    <a href="#">How to - Blog</a>
+                    <a href="#">Youtube Playlist</a>
+                </div>
+            
+        </div>
+        
+        <div class="bottom">
+
+            <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
+            <div class="social-media-footer">
+                <a href="https://facebook.com" target="_blank">
+                    <i class="social-media-icon fa-brands fa-facebook"></i>
+                </a>
+                <a href="#https://twitter.com/" target="_blank">
+                    <i class="social-media-icon fa-brands fa-twitter"></i>
+                </a>
+                <a href="https://instagram.com/" target="_blank">
+                    <i class="social-media-icon fa-brands fa-instagram"></i>
+                </a>
+                <a href="https://linkein.com/" target="_blank">
+                    <i class="social-media-icon fa-brands fa-linkedin"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    </div>
+</html></footer><scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><scriptsrc="scripts/script.js"></script></html></body></html></body></html>
