--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         </nav>
 
                         <a class="btn-yellow btn-login" href="login.html">Login
-                            <i class="fa-solid fa-square-arrow-up-right"></i>
+                            <i class="fa-solid fa-arrow-up-right"></i>
                         </a>
                     </div>
                 </div>
@@ -76,9 +76,9 @@
                 <div class="content">
                     <h1>We Provide The Best Business Solutions</h1>
                     <p>Establish your vision and value proposition and turn them into testable prototypes.</p>
-                    <a class="btn-yellow" href="login.html">Get Consulting<i class="fa-regular fa-arrow-up-right"></i>
+                    <a class="btn-yellow" href="login.html">Get Consulting<i class="fa-solid fa-arrow-up-right"></i>
                     </a>
-                    <a class="btn-transparent" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i>
+                    <a class="btn-transparent" href="services.html">Learn More<i class="fa-solid fa-arrow-up-right"></i>
                     </a>
                 </div>
                 <img src="images/Image-showcase.png" alt="showcase image of a man in a suit with a tablet">
@@ -94,34 +94,36 @@
         </div>
 
         <section class="features">
-            <div class="container">
-                <div class="content">
-                    <h2 class="heading-red">Features</h2>
-                    <h3>Our Accounting is trusted by thousand of companies</h3>
-                    <a class="btn-yellow btn-features" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i>
-                    </a>
-                </div>
-                <div class="features-consulting">
-                    <div class="box">
-                        <img src="images/Icon-handshake.svg" alt="icon of a handshake">
-                        <h3>Business Advice</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+            <div class="border-container">
+                <div class="container">
+                    <div class="content">
+                        <h2 class="heading-red">Features</h2>
+                        <h3>Our Accounting is trusted by thousand of companies</h3>
+                        <a class="btn-yellow btn-features" href="services.html">Learn More<i class="fa-regular fa-arrow-up-right"></i>
+                        </a>
                     </div>
-                    <div class="box">
-                        <img src="images/Icon-lightbulb.svg" alt="icon of a handshake">
-                        <h3>Startup Business</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                        </p>
-                    </div>
-                    <div class="box">
-                        <img src="images/Icon-graf.svg" alt="icon of a handshake">
-                        <h3>Financial Advice</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-                    </div>
-                    <div class="box">
-                        <img src="images/Icon-settings.svg" alt="icon of a handshake">
-                        <h3>Risk Management</h3>
-                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                    <div class="features-consulting">
+                        <div class="box">
+                            <img src="images/Icon-handshake.svg" alt="icon of a handshake">
+                            <h3>Business Advice</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="box">
+                            <img src="images/Icon-lightbulb.svg" alt="icon of a handshake">
+                            <h3>Startup Business</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                            </p>
+                        </div>
+                        <div class="box">
+                            <img src="images/Icon-graf.svg" alt="icon of a handshake">
+                            <h3>Financial Advice</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
+                        <div class="box">
+                            <img src="images/Icon-settings.svg" alt="icon of a handshake">
+                            <h3>Risk Management</h3>
+                            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -470,46 +472,53 @@
     </body>
 
     <footer>
-        <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
-        <div class="footer-content">
-
-            <div class="container">
-                <div class="box box-1">
-                    <img src="images/logotype-white.svg" alt="Logotype">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
-                </div>
-
-                <div class="box box-2">
-                    <h4>company</h4>
-                    <a href="#">about</a>
-                    <a href="#">features</a>
-                    <a href="#">works</a>
-                    <a href="#">career</a>
-                </div>
-                <div class="box box-3">
-                    <h4>help</h4>
-                    <a href="#">customer support</a>
-                    <a href="#">delivery details</h3>
-                    <a href="#">terms & conditions</h3>
-                    <a href="#">privacy policy</h3>
-                </div>
-                <div class="box box-4">
-                    <h4>Resources</h4>
-                    <a href="#">Free eBooks</a>
-                    <a href="#">Development Tutorial</a>
-                    <a href="#">How to - Blog</a>
-                    <a href="#">Youtube Playlist</a>
-                </div>
-                <div class="box box-5">
-                    <h4>Link</h4>
-                    <a href="#">Free eBooks</a>
-                    <a href="#">Development Tutorial</a>
-                    <a href="#">How to - Blog</a>
-                    <a href="#">Youtube Playlist</a>
-                </div>
-            
+        <div class="img-advertising-footer">
+            <img src="images/3.svg" alt="">
+            <img src="images/🖥-Landing-Pages.svg" alt="">
+            <img src="images/Page-2.svg" alt="">
+            <img src="images/Page-3.svg" alt="">
+            <img src="images/Page-1.svg" alt="">
         </div>
-        
+        <div class="footer-top">
+            <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
+                <div class="container">
+                    <div class="box box-1">
+                        <img src="images/logotype-white.svg" alt="Logotype">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+                    </div>
+
+                    <div class="box box-2">
+                        <h4>company</h4>
+                        <a href="#">about</a>
+                        <a href="#">features</a>
+                        <a href="#">works</a>
+                        <a href="#">career</a>
+                    </div>
+                    <div class="box box-3">
+                        <h4>help</h4>
+                        <a href="#">customer support</a>
+                        <a href="#">delivery details</h3>
+                        <a href="#">terms & conditions</h3>
+                        <a href="#">privacy policy</h3>
+                    </div>
+                    <div class="box box-4">
+                        <h4>Resources</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#">How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                    <div class="box box-5">
+                        <h4>Link</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#" >How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                </div>
+
+
+        </div>
         <div class="bottom">
 
             <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
@@ -528,6 +537,8 @@
                 </a>
             </div>
         </div>
+
     </div>
-    </div>
-</html></footer><scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><scriptsrc="scripts/script.js"></script></html></body></html></body></html>
+</footer>
+</html>
+<scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><scriptsrc="scripts/script.js"></script></html></body></html></body></html>
