--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
 
                 <div class="founder">
                     <img src="images/Image-about.svg" alt="Image of the Founder, Samantha Brown">
-
                     <div class="background-frame">
                         <p>
                             <strong>Samantha Brown</strong>,
@@ -142,28 +141,34 @@
                             adipisicing elit."
                         </p>
                     </div>
-
                 </div>
 
                 <div class="content">
                     <h2 class="heading-red">About Company</h2>
                     <h3>We Are Business Consulting & Credit Repair Experts</h3>
+
                     <div class="content-text">
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos.</p>
                         <p class="p-last">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam officiis quas assumenda esse obcaecati? Ex esse error voluptates iure vel totam eos.</p>
                     </div>
-                    <a class="btn-black" href="login.html">Learn More<i class="arrow-top-right fa-regular fa-arrow-up-right"></i>
-                    </a>
-                    <a class="btn-circle" href=" login.html">
-                        <i class="fa-solid fa-caret-right"></i>
-                    </a>
+
+                    <div class="flex-row">
+                        <div class="btn-top">
+                            <a class="btn-black" href="login.html">Learn More<i class="arrow-top-right fa-regular fa-arrow-up-right"></i>
+                            </a>
+                        </div>
+
+                        <div class="btn-video">
+                            <a class="btn-circle" href=" login.html">
+                                <i class="fa-solid fa-caret-right"></i>
+                            </a>
+                            <p>Intro Video</p>
+                        </div>
+                    </div>
 
                 </div>
-
             </div>
-
         </section>
-
 
         <section class="services">
             <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
@@ -217,6 +222,10 @@
         <section class="choose-us">
             <div class="container">
                 <div class="content">
+                    <div class="main-img-container">
+                        <div class="frame-grey"></div>
+                        <img class="main-img" src="images/choose-us.png" alt="Image of two women discussing">
+                    </div>
                     <div class="headlines">
                         <h2 class="heading-red">Why Choose Us</h2>
                         <h3>why we are the best business consulting agency</h3>
@@ -243,11 +252,7 @@
                         <p>Lorem, ipsum dolor sit amet concectetur.</p>
                     </div>
                 </div>
-                <div class="main-img-container">
-                    <div class="frame-grey"></div>
-                    <img class="main-img" src="images/choose-us.png" alt="Image of two women discussing">
 
-                </div>
 
             </div>
         </section>
@@ -273,13 +278,13 @@
                     </div>
                     <div class="box box-3">
                         <img src="images/case-insights.png" alt="laptop with businessintelligence insights">
-                        <h4>business insights is a important piece of your business</h4>
+                        <h4 class=" hej">business insights is a important piece of your business</h4>
                         <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
                     <div class="box box-4">
                         <img src="images/case-responsive.png" alt="pink apple products">
-                        <h4>why your client needs a responsive website</h4>
+                        <h4 class="txt-underline">why your client needs a responsive website</h4>
                         <a class="btn-transparent" href="#">read more<i class="fa-regular fa-arrow-up-right"></i>
                         </a>
                     </div>
@@ -481,41 +486,41 @@
         </div>
         <div class="footer-top">
             <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
-                <div class="container">
-                    <div class="box box-1">
-                        <img src="images/logotype-white.svg" alt="Logotype">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
-                    </div>
-
-                    <div class="box box-2">
-                        <h4>company</h4>
-                        <a href="#">about</a>
-                        <a href="#">features</a>
-                        <a href="#">works</a>
-                        <a href="#">career</a>
-                    </div>
-                    <div class="box box-3">
-                        <h4>help</h4>
-                        <a href="#">customer support</a>
-                        <a href="#">delivery details</h3>
-                        <a href="#">terms & conditions</h3>
-                        <a href="#">privacy policy</h3>
-                    </div>
-                    <div class="box box-4">
-                        <h4>Resources</h4>
-                        <a href="#">Free eBooks</a>
-                        <a href="#">Development Tutorial</a>
-                        <a href="#">How to - Blog</a>
-                        <a href="#">Youtube Playlist</a>
-                    </div>
-                    <div class="box box-5">
-                        <h4>Link</h4>
-                        <a href="#">Free eBooks</a>
-                        <a href="#">Development Tutorial</a>
-                        <a href="#" >How to - Blog</a>
-                        <a href="#">Youtube Playlist</a>
-                    </div>
+            <div class="container">
+                <div class="box box-1">
+                    <img src="images/logotype-white.svg" alt="Logotype">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
                 </div>
+
+                <div class="box box-2">
+                    <h4>company</h4>
+                    <a href="#">about</a>
+                    <a href="#">features</a>
+                    <a href="#">works</a>
+                    <a href="#">career</a>
+                </div>
+                <div class="box box-3">
+                    <h4>help</h4>
+                    <a href="#">customer support</a>
+                    <a href="#">delivery details</h3>
+                    <a href="#">terms & conditions</h3>
+                    <a href="#">privacy policy</h3>
+                </div>
+                <div class="box box-4">
+                    <h4>Resources</h4>
+                    <a href="#">Free eBooks</a>
+                    <a href="#">Development Tutorial</a>
+                    <a href="#">How to - Blog</a>
+                    <a href="#">Youtube Playlist</a>
+                </div>
+                <div class="box box-5">
+                    <h4>Link</h4>
+                    <a href="#">Free eBooks</a>
+                    <a href="#">Development Tutorial</a>
+                    <a href="#">How to - Blog</a>
+                    <a href="#">Youtube Playlist</a>
+                </div>
+            </div>
 
 
         </div>
@@ -537,8 +542,5 @@
                 </a>
             </div>
         </div>
-
     </div>
-</footer>
-</html>
-<scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><scriptsrc="scripts/script.js"></script></html></body></html></body></html>
+</html></footer></html><scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><scriptsrc="scripts/script.js"></script></html></body></html></body></html>
