--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- <main> -->
         <header>
             <div class="container">
-                <a href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
+                <a class="logotype" href="index.html"><img src="images/Logo.svg" alt="crito logotype"></a>
                 <button class="menu-bars">
                     <i class="fa-solid fa-bars"></i>
                 </button>
@@ -81,7 +81,7 @@
                     <a class="btn-transparent" href="services.html">Learn More<i class="fa-solid fa-arrow-up-right"></i>
                     </a>
                 </div>
-                <img src="images/Image-showcase.png" alt="showcase image of a man in a suit with a tablet">
+                <img class="img-showcase" src="images/Image-showcase.png" alt="showcase image of a man in a suit with a tablet">
             </div>
         </section>
 
@@ -213,7 +213,7 @@
                     </div>
 
                 </div>
-                <a class="btn-transparent" href="services.html">Browse Services<i class="fa-regular fa-arrow-up-right"></i>
+                <a class="btn-transparent btn-center" href="services.html">Browse Services<i class="fa-regular fa-arrow-up-right"></i>
                 </a>
             </div>
 
@@ -407,7 +407,7 @@
                 <h2>get news updates by signup</h2>
                 <form class="input-box">
                     <input type="text" placeholder="username@domain.com">
-                    <button class="btn-yellow">Subscribe<i class="fa-regular fa-arrow-up-right"></i>
+                    <button class="btn-yellow btn-yellow-scale">Subscribe<i class="fa-regular fa-arrow-up-right"></i>
                     </button>
                 </form>
             </div>
@@ -474,73 +474,77 @@
             </div>
         </section>
 
+
+        <footer>
+            <div class="img-advertising-footer">
+                <img src="images/3.svg" alt="">
+                <img src="images/🖥-Landing-Pages.svg" alt="">
+                <img src="images/Page-2.svg" alt="">
+                <img src="images/Page-3.svg" alt="">
+                <img src="images/Page-1.svg" alt="">
+            </div>
+            <div class="footer-top">
+                <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
+                <div class="container">
+                    <div class="box box-1">
+                        <img src="images/logotype-white.svg" alt="Logotype">
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
+                    </div>
+    
+                    <div class="box box-2">
+                        <h4>company</h4>
+                        <a href="#">about</a>
+                        <a href="#">features</a>
+                        <a href="#">works</a>
+                        <a href="#">career</a>
+                    </div>
+                    <div class="box box-3">
+                        <h4>help</h4>
+                        <a href="#">customer support</a>
+                        <a href="#">delivery details</a>
+                        <a href="#">terms & conditions</a>
+                        <a href="#">privacy policy</a>
+                    </div>
+                    <div class="box box-4">
+                        <h4>Resources</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#">How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                    <div class="box box-5">
+                        <h4>Link</h4>
+                        <a href="#">Free eBooks</a>
+                        <a href="#">Development Tutorial</a>
+                        <a href="#">How to - Blog</a>
+                        <a href="#">Youtube Playlist</a>
+                    </div>
+                </div>
+            </div>
+            <div class="bottom">
+    
+                <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
+                <div class="social-media-footer">
+                    <a href="https://facebook.com" target="_blank">
+                        <i class="social-media-icon fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="#https://twitter.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://instagram.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://linkein.com/" target="_blank">
+                        <i class="social-media-icon fa-brands fa-linkedin"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
+    <!-- <script src="scripts/script.js"></script>  -->
     </body>
 
-    <footer>
-        <div class="img-advertising-footer">
-            <img src="images/3.svg" alt="">
-            <img src="images/🖥-Landing-Pages.svg" alt="">
-            <img src="images/Page-2.svg" alt="">
-            <img src="images/Page-3.svg" alt="">
-            <img src="images/Page-1.svg" alt="">
-        </div>
-        <div class="footer-top">
-            <img class="background-lines-right" src="images/background-lines-right.svg" alt="">
-            <div class="container">
-                <div class="box box-1">
-                    <img src="images/logotype-white.svg" alt="Logotype">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat obcaecati voluptas voluptates! Voluptates laborum nam ratione minus necessitatibus, iure praesentium.</p>
-                </div>
+   
 
-                <div class="box box-2">
-                    <h4>company</h4>
-                    <a href="#">about</a>
-                    <a href="#">features</a>
-                    <a href="#">works</a>
-                    <a href="#">career</a>
-                </div>
-                <div class="box box-3">
-                    <h4>help</h4>
-                    <a href="#">customer support</a>
-                    <a href="#">delivery details</h3>
-                    <a href="#">terms & conditions</h3>
-                    <a href="#">privacy policy</h3>
-                </div>
-                <div class="box box-4">
-                    <h4>Resources</h4>
-                    <a href="#">Free eBooks</a>
-                    <a href="#">Development Tutorial</a>
-                    <a href="#">How to - Blog</a>
-                    <a href="#">Youtube Playlist</a>
-                </div>
-                <div class="box box-5">
-                    <h4>Link</h4>
-                    <a href="#">Free eBooks</a>
-                    <a href="#">Development Tutorial</a>
-                    <a href="#">How to - Blog</a>
-                    <a href="#">Youtube Playlist</a>
-                </div>
-            </div>
-
-
-        </div>
-        <div class="bottom">
-
-            <p class="footer-txt">&copy; 2023 crito - consulting company inc. all right reserved.</p>
-            <div class="social-media-footer">
-                <a href="https://facebook.com" target="_blank">
-                    <i class="social-media-icon fa-brands fa-facebook"></i>
-                </a>
-                <a href="#https://twitter.com/" target="_blank">
-                    <i class="social-media-icon fa-brands fa-twitter"></i>
-                </a>
-                <a href="https://instagram.com/" target="_blank">
-                    <i class="social-media-icon fa-brands fa-instagram"></i>
-                </a>
-                <a href="https://linkein.com/" target="_blank">
-                    <i class="social-media-icon fa-brands fa-linkedin"></i>
-                </a>
-            </div>
-        </div>
-    </div>
-</html></footer></html><scriptsrc="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script><scriptsrc="scripts/script.js"></script></html></body></html></body></html>
+</html>
